--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,24 @@
+## epub tex4ebook stuff
+*.opf
+*.4ct
+*.4tc
+*.dvi
+*.epub
+*.idv
+*.ig
+*.ncx
+*.tmp
+*.xhtml
+*.xrf
+mimetype
+*.xml
+*.html
+
+## other
+~
+*.DS_Store
+
+
 ## Core latex/pdflatex auxiliary files:
 *.aux
 *.lof
